include(corridor_servoingTaskLib)
ADD_LIBRARY(${CORRIDOR_SERVOING_TASKLIB_NAME} SHARED 
    ${CORRIDOR_SERVOING_TASKLIB_SOURCES})

add_dependencies(${CORRIDOR_SERVOING_TASKLIB_NAME}
    regen-toolkit)


TARGET_LINK_LIBRARIES(${CORRIDOR_SERVOING_TASKLIB_NAME}
    ${OrocosRTT_LIBRARIES}
    ${CORRIDOR_SERVOING_TASKLIB_DEPENDENT_LIBRARIES})
SET_TARGET_PROPERTIES(${CORRIDOR_SERVOING_TASKLIB_NAME}
    PROPERTIES LINK_INTERFACE_LIBRARIES "${CORRIDOR_SERVOING_TASKLIB_INTERFACE_LIBRARIES}")

INSTALL(TARGETS ${CORRIDOR_SERVOING_TASKLIB_NAME}
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION lib/orocos)

INSTALL(FILES ${CORRIDOR_SERVOING_TASKLIB_HEADERS}
    DESTINATION include/orocos/corridor_servoing)

